--- a/index.html
+++ b/index.html
@@ -13,12 +13,9 @@
 </head>
 <body>
   <section class="first-section">
-    <div class="container">
+    <div class="container-spare">
       <div class="first-section__header">
-        <div class="first-section__image">
           <img src="./img/logo-main.svg" alt="логотип">
-        </div>
-
         <div class="first-section__contacts">
           <p class="first-section__number">
             +7 (962) 556 - 1234
@@ -80,9 +77,10 @@
       </div>
     </div>
   </section>
+
   <section class="third-section">
     <div class="container">
-      <div class="third-section__footer">
+      <div class="third-section__post">
         <h2 class="third-section__title-text">Остались вопросы?</h2>
       </div>
       <form action="https://jsonplaceholder.typicode.com/posts" method="POST">
@@ -97,15 +95,21 @@
       </form>
     </div>
   </section>
-  <footer class="footer">
-    <div>
-      <div></div>
-      <div></div>
+  <section class="footer">
+    <div class="container-mini footer__bunch">
+        <div class="footer__union">
+          <img src="./img/logo-main.svg" alt="">
+        <div class="footer__company">© 2022 XXXcompany. <br>
+        Все права защищены.</div>
+        </div>
+        <div class="footer__made-by">Сделано в Ивановым Иваном</div>
+        <div class="footer__contacts">
+          <p class="footer__number">
+            +7 (962) 556 - 1234
+          </p>
+          <a href="#" class="footer__call-me">Перезвоните мне</a>
+        </div>
     </div>
-    <div></div>
-    <div>
-
-    </div>
-  </footer>
+  </section>
 </body>
 </html>
