--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <section class="first-section">
-    <div class="container-spare">
+    <div class="container">
       <div class="first-section__header">
           <img src="./img/logo-main.svg" alt="логотип">
         <div class="first-section__contacts">
@@ -96,7 +96,7 @@
     </div>
   </section>
   <section class="footer">
-    <div class="container-mini footer__bunch">
+    <div class="container footer__bunch">
         <div class="footer__union">
           <img src="./img/logo-main.svg" alt="">
         <div class="footer__company">© 2022 XXXcompany. <br>
