--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         Уникальный заголовок для преимущества компании
       </h2>
       <figure class="main__about">
-        <img src="./img/hyphen.svg" alt="">
+        <img class="main__about-hyphen" src="./img/hyphen.svg" alt="">
         <figcaption class="main__about-text">О нас</figcaption>
-        <img src="./img/hyphen.svg" alt="">
+        <img class="main__about-hyphen" src="./img/hyphen.svg" alt="">
       </figure>
       <p class="main__paragraph">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать <br> несколько абзацев более менее осмысленного текста рыбы на русском языке, а <br>начинающему оратору отточить.</p>
       <div class="main__number-of-container">
@@ -100,11 +100,13 @@
   <section class="footer">
     <div class="container footer__bunch">
         <div class="footer__union">
-          <img src="./img/logo-main.svg" alt="">
+          <div class="footer__logo">
+            <img src="./img/logo-main.svg" alt="">
+          </div>
         <div class="footer__company">© 2022 XXXcompany. <br>
         Все права защищены.</div>
         </div>
-        <div class="footer__made-by">Сделано в Ивановым Иваном</div>
+        <div class="footer__made-by">Сделано Ивановым Иваном</div>
         <div class="footer__contacts">
           <p class="footer__number">
             +7 (962) 556 - 1234
