--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
   <title>Template</title>
 </head>
 <body>
-  <section class="present">
+  <section class="header">
     <div class="container">
-      <div class="present__header">
-          <div class="present__logo">
+      <div class="header__menu">
+          <div class="header__logo">
             <img src="./img/logo-main.svg" alt="логотип">
           </div>
-        <div class="present__contacts">
-          <p class="present__number">
+        <div class="header__contacts">
+          <p class="header__number">
             +7 (962) 556 - 1234
           </p>
-          <a href="#" class="present__call-me">Перезвоните мне</a>
+          <a href="#" class="header__call-me">Перезвоните мне</a>
         </div>
       </div>
 
-      <div class="present__title">
-        <h1 class="present__title-text">
+      <div class="header__title">
+        <h1 class="header__title-text">
           Заголовок c уникальным торговым предложением по системе 4U
         </h1>
-        <p class="present__subtitle-text">
+        <p class="header__subtitle-text">
           Описания предлжения компании. Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему.
         </p>
       </div>
-      <button class="present__button">Подробнее</button>
+      <button class="header__button">Подробнее</button>
     </div>   
   </section>
   
