--- a/index.html
+++ b/index.html
@@ -33,50 +33,50 @@
         <p class="header__subtitle-text">
           Описания предлжения компании. Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему.
         </p>
+        <button class="header__button">Подробнее</button>
       </div>
-      <button class="header__button">Подробнее</button>
     </div>   
   </section>
   
   <section class="main">
     <div class="container">
-      <h2 class="main__title">
-        Уникальный заголовок для преимущества компании
-      </h2>
-      <figure class="main__about">
-        <img class="main__about-hyphen" src="./img/hyphen.svg" alt="">
+        <h2 class="main__title">
+          Уникальный заголовок для преимущества компании
+        </h2>
+        <figure class="main__about">
         <figcaption class="main__about-text">О нас</figcaption>
-        <img class="main__about-hyphen" src="./img/hyphen.svg" alt="">
-      </figure>
-      <p class="main__paragraph">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать <br> несколько абзацев более менее осмысленного текста рыбы на русском языке, а <br>начинающему оратору отточить.</p>
-      <div class="main__number-of-container">
-        <div class="main__block-circle">
-          <figure class="main__group-img-sign">
+        </figure>
+        <p class="main__paragraph">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать <br> несколько абзацев более менее осмысленного текста рыбы на русском языке, а <br>начинающему оратору отточить.</p>
+
+        <ul class="main__block-circle">
+          <li class="main__group-img-sign">
             <img src="./img/label1.svg" alt="">
             <figcaption class="main__sign-text">
-              Первое целевое <br> преимущество
+              Первое целевое преимущество
             </figcaption>
-          </figure>
-          <figure class="main__group-img-sign">
+          </li>
+
+          <li class="main__group-img-sign">
             <img src="./img/label2.svg" alt="">
             <figcaption class="main__sign-text">
-              Второе целевое <br> преимущество
+              Второе целевое преимущество
             </figcaption>
-          </figure>
-          <figure class="main__group-img-sign">
+          </li>
+
+          <li class="main__group-img-sign">
             <img src="./img/label3.svg" alt="">
             <figcaption class="main__sign-text">
-              Третье целевое <br> преимущество
+              Третье целевое преимущество
             </figcaption>
-          </figure>
-          <figure class="main__group-img-sign">
+          </li>
+
+          <li class="main__group-img-sign">
             <img src="./img/label4.svg" alt="">
             <figcaption class="main__sign-text">
-              Четвертое целевое <br> преимущество
+              Четвертое целевое преимущество
             </figcaption>
-          </figure>
-        </div>
-      </div>
+          </li>
+        </ul>
     </div>
   </section>
 
@@ -86,13 +86,16 @@
         <h2 class="contacts__title-text">Остались вопросы?</h2>
       </div>
       <form action="https://jsonplaceholder.typicode.com/posts" method="POST">
-        <legend class="contacts__subtitle-text">Оставьте номер телефона, и мы перезвоним вам</legend>
+        <h3 class="contacts__subtitle-text">Оставьте номер телефона, и мы перезвоним вам</h3>
         <div class="contacts__select-data">
           <label for="name"><input class="contacts__decor" type="text" name="name" id="name" placeholder="Ваше имя" required></label>
           <label for="number"><input class="contacts__decor" type="tel" name="number" id="number" placeholder="Телефон" required title="+7...-...-..-.." pattern="^\+?[7-8]-?[0-9]{3}-?[0-9]{3}-?[0-9]{2}-?[0-9]{2}$"></label>
-          <label for="E-mail"><input class="contacts__decor" type="text" name="E-mail" id="E-mail" placeholder="E-mail" required></label>
+          <div class="contacts__e-mail">
+            <label for="E-mail"><input class="contacts__decor" type="text" name="E-mail" id="E-mail" placeholder="E-mail" required></label>
+          </div>
+          <button class="contacts__button" input type="submit">позвоните мне</button>
         </div>
-        <button class="contacts__button" input type="submit">позвоните мне</button>
+        
         <p class="contacts__p">Я даю свое <a href="#" class="contacts__agreement">согласие</a> на обработку персональных данных</p>
       </form>
     </div>
