--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
           <a href="#" class="header__call-me">Перезвоните мне</a>
         </div>
       </div>
+    </div>
+  </section>
 
-      <div class="header__title">
-        <h1 class="header__title-text">
+  <main>
+    <section class="container">
+      <div class="description__title ">
+        <h1 class="description__title-text">
           Заголовок c уникальным торговым предложением по системе 4U
         </h1>
         <p class="header__subtitle-text">
@@ -35,11 +39,8 @@
         </p>
         <button class="header__button">Подробнее</button>
       </div>
-    </div>   
-  </section>
-  
-  <section class="main">
-    <div class="container">
+      </section>
+      <section class="advantage">
         <h2 class="main__title">
           Уникальный заголовок для преимущества компании
         </h2>
@@ -77,37 +78,35 @@
             </figcaption>
           </li>
         </ul>
-    </div>
-  </section>
+      </section>
 
-  <section class="contacts">
-    <div class="container">
-      <div class="contacts__post">
-        <h2 class="contacts__title-text">Остались вопросы?</h2>
-      </div>
-      <form action="https://jsonplaceholder.typicode.com/posts" method="POST">
-        <h3 class="contacts__subtitle-text">Оставьте номер телефона, и мы перезвоним вам</h3>
-        <div class="contacts__select-data">
-          <label for="name"><input class="contacts__decor" type="text" name="name" id="name" placeholder="Ваше имя" required></label>
-          <label for="number"><input class="contacts__decor" type="tel" name="number" id="number" placeholder="Телефон" required title="+7...-...-..-.." pattern="^\+?[7-8]-?[0-9]{3}-?[0-9]{3}-?[0-9]{2}-?[0-9]{2}$"></label>
-          <div class="contacts__e-mail">
-            <label for="E-mail"><input class="contacts__decor" type="text" name="E-mail" id="E-mail" placeholder="E-mail" required></label>
+      <section class="contacts">
+        <div class="container">
+          <div class="contacts__post">
+            <h2 class="contacts__title-text">Остались вопросы?</h2>
           </div>
-          <button class="contacts__button" input type="submit">позвоните мне</button>
+            <form action="https://jsonplaceholder.typicode.com/posts" method="POST">
+            <h3 class="contacts__subtitle-text">Оставьте номер телефона, и мы перезвоним вам</h3>
+              <div class="contacts__select-data">
+                <label for="name"><input class="contacts__decor" type="text" name="name" id="name" placeholder="Ваше имя" required></label>
+                <label for="number"><input class="contacts__decor" type="tel" name="number" id="number" placeholder="Телефон" required title="+7...-...-..-.." pattern="^\+?[7-8]-?[0-9]{3}-?[0-9]{3}-?[0-9]{2}-?[0-9]{2}$"></label>
+                  <div class="contacts__e-mail">
+                    <label for="E-mail"><input class="contacts__decor" type="text" name="E-mail" id="E-mail" placeholder="E-mail" required></label>
+                  </div>
+                <button class="contacts__button" input type="submit">позвоните мне</button>
+              </div>
+            <p class="contacts__p">Я даю свое <a href="#" class="contacts__agreement">согласие</a> на обработку персональных данных</p>
+            </form>
         </div>
-        
-        <p class="contacts__p">Я даю свое <a href="#" class="contacts__agreement">согласие</a> на обработку персональных данных</p>
-      </form>
-    </div>
-  </section>
+      </section>
+  </main>
   <section class="footer">
     <div class="container footer__bunch">
         <div class="footer__union">
           <div class="footer__logo">
             <img src="./img/logo-main.svg" alt="">
           </div>
-        <div class="footer__company">© 2022 XXXcompany. <br>
-        Все права защищены.</div>
+        <div class="footer__company">© 2022 XXXcompany. Все права защищены.</div>
         </div>
         <div class="footer__made-by">Сделано Ивановым Иваном</div>
         <div class="footer__contacts">
