--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <title>Template</title>
 </head>
 <body>
+  
+<header>
   <section class="header">
     <div class="container">
       <div class="header__menu">
@@ -27,10 +29,11 @@
       </div>
     </div>
   </section>
+</header>
 
   <main>
     <section class="container">
-      <div class="description__title ">
+      <div class="description__title">
         <h1 class="description__title-text">
           Заголовок c уникальным торговым предложением по системе 4U
         </h1>
@@ -100,6 +103,8 @@
         </div>
       </section>
   </main>
+
+<footer>
   <section class="footer">
     <div class="container footer__bunch">
         <div class="footer__union">
@@ -117,5 +122,6 @@
         </div>
     </div>
   </section>
+</footer>
 </body>
 </html>
