--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
   <title>Template</title>
 </head>
 <body>
-  
-<header>
-  <section class="header">
-    <div class="container">
-      <div class="header__menu">
+
+<header class="header">
+    <div class="container header__container">
           <div class="header__logo">
             <img src="./img/logo-main.svg" alt="логотип">
           </div>
@@ -26,9 +24,7 @@
           </p>
           <a href="#" class="header__call-me">Перезвоните мне</a>
         </div>
-      </div>
     </div>
-  </section>
 </header>
 
   <main>
