--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 </header>
 
   <main>
-    <section class="container">
-      <div class="description__title">
+    <section class="description__title">
+      <div class="container">
+        <div class="description__title"></div>
         <h1 class="description__title-text">
           Заголовок c уникальным торговым предложением по системе 4U
         </h1>
