--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
     </div>
 </header>
 
-  <main>
+  <main class="description">
     <section class="description__title">
       <div class="container">
-        <div class="description__title"></div>
         <h1 class="description__title-text">
           Заголовок c уникальным торговым предложением по системе 4U
         </h1>
@@ -40,6 +39,7 @@
         <button class="header__button">Подробнее</button>
       </div>
       </section>
+      
       <section class="advantage">
         <h2 class="main__title">
           Уникальный заголовок для преимущества компании
