--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 </header>
 
-  <main class="description">
+  <main>
     <section class="description__title">
       <div class="container">
         <h1 class="description__title-text">
@@ -36,11 +36,12 @@
         <p class="header__subtitle-text">
           Описания предлжения компании. Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему.
         </p>
-        <button class="header__button">Подробнее</button>
+        <button class="description__button">Подробнее</button>
       </div>
       </section>
-      
+
       <section class="advantage">
+        
         <h2 class="main__title">
           Уникальный заголовок для преимущества компании
         </h2>
