--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </div>
         <div class="header__contacts">
           <p class="header__number">
-            +7 (962) 556 - 1234
+            <a href="tel:+79509302893">+7 (962) 556 - 1234</a>
           </p>
           <a href="#" class="header__call-me">Перезвоните мне</a>
         </div>
@@ -28,12 +28,12 @@
 </header>
 
   <main>
-    <section class="description__title">
-      <div class="container">
+    <section class="description">
+      <div class="description__container description__dop">
         <h1 class="description__title-text">
           Заголовок c уникальным торговым предложением по системе 4U
         </h1>
-        <p class="header__subtitle-text">
+        <p class="description__subtitle-text">
           Описания предлжения компании. Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему.
         </p>
         <button class="description__button">Подробнее</button>
@@ -41,7 +41,6 @@
       </section>
 
       <section class="advantage">
-        
         <h2 class="main__title">
           Уникальный заголовок для преимущества компании
         </h2>
@@ -114,7 +113,7 @@
         <div class="footer__made-by">Сделано Ивановым Иваном</div>
         <div class="footer__contacts">
           <p class="footer__number">
-            +7 (962) 556 - 1234
+            <a href="tel:+79509302893">+7 (962) 556 - 1234</a>
           </p>
           <a href="#" class="footer__call-me">Перезвоните мне</a>
         </div>
