--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <main>
     <section class="description">
-      <div class="description__container description__dop">
+      <div class="description__container description__dop container">
         <h1 class="description__title-text">
           Заголовок c уникальным торговым предложением по системе 4U
         </h1>
