--- a/index.html
+++ b/index.html
@@ -41,39 +41,39 @@
       </section>
 
       <section class="advantage">
-        <h2 class="main__title">
+        <h2 class="advantage__title">
           Уникальный заголовок для преимущества компании
         </h2>
-        <figure class="main__about">
-        <figcaption class="main__about-text">О нас</figcaption>
+        <figure class="advantage__about">
+        <figcaption class="advantage__about-text">О нас</figcaption>
         </figure>
-        <p class="main__paragraph">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать <br> несколько абзацев более менее осмысленного текста рыбы на русском языке, а <br>начинающему оратору отточить.</p>
+        <p class="advantage__paragraph">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать <br> несколько абзацев более менее осмысленного текста рыбы на русском языке, а <br>начинающему оратору отточить.</p>
 
-        <ul class="main__block-circle">
-          <li class="main__group-img-sign">
+        <ul class="advantage__block-circle">
+          <li class="advantage__group-img-sign">
             <img src="./img/label1.svg" alt="">
-            <figcaption class="main__sign-text">
+            <figcaption class="advantage__sign-text">
               Первое целевое преимущество
             </figcaption>
           </li>
 
-          <li class="main__group-img-sign">
+          <li class="advantage__group-img-sign">
             <img src="./img/label2.svg" alt="">
-            <figcaption class="main__sign-text">
+            <figcaption class="advantage__sign-text">
               Второе целевое преимущество
             </figcaption>
           </li>
 
-          <li class="main__group-img-sign">
+          <li class="advantage__group-img-sign">
             <img src="./img/label3.svg" alt="">
-            <figcaption class="main__sign-text">
+            <figcaption class="advantage__sign-text">
               Третье целевое преимущество
             </figcaption>
           </li>
 
-          <li class="main__group-img-sign">
+          <li class="advantage__group-img-sign">
             <img src="./img/label4.svg" alt="">
-            <figcaption class="main__sign-text">
+            <figcaption class="advantage__sign-text">
               Четвертое целевое преимущество
             </figcaption>
           </li>
