final write @media

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
       </section>
 
       <section class="advantage">
-        <h2 class="advantage__title">
+        <div class="container">
+          <h2 class="advantage__title">
           Уникальный заголовок для преимущества компании
         </h2>
         <figure class="advantage__about">
@@ -78,6 +79,7 @@
             </figcaption>
           </li>
         </ul>
+        </div>
       </section>
 
       <section class="contacts">
@@ -101,8 +103,7 @@
       </section>
   </main>
 
-<footer>
-  <section class="footer">
+<footer class="footer">
     <div class="container footer__bunch">
         <div class="footer__union">
           <div class="footer__logo">
@@ -118,7 +119,6 @@
           <a href="#" class="footer__call-me">Перезвоните мне</a>
         </div>
     </div>
-  </section>
 </footer>
 </body>
 </html>
