--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="description">
       <div class="description__container container">
         <h1 class="description__title-text">
-          Заголовок c уникальным торговым предложением по системе 4U
+          Заголовок c уникальным торговым предложение по системе 4U
         </h1>
         <p class="description__subtitle-text">
           Описания предлжения компании. Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему.
@@ -111,7 +111,7 @@
           </div>
         <div class="footer__company">© 2022 XXXcompany. Все права защищены.</div>
         </div>
-        <div class="footer__made-by">Сделано Ивановым Иваном</div>
+        <div class="footer__made-by">Сделано в Ивановым Иваном</div>
         <div class="footer__contacts">
           <p class="footer__number">
             <a href="tel:+79509302893">+7 (962) 556 - 1234</a>
