поправлял футер хедер на экранах 320 исправлял секцию union выносил за нее кнопку добавлял отступы

--- a/index.html
+++ b/index.html
@@ -46,37 +46,37 @@
           Уникальный заголовок для преимущества компании
         </h2>
         <figure class="advantage__about">
-        <figcaption class="advantage__about-text">О нас</figcaption>
+        <p class="advantage__about-text">О нас</p>
         </figure>
         <p class="advantage__paragraph">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать <br> несколько абзацев более менее осмысленного текста рыбы на русском языке, а <br>начинающему оратору отточить.</p>
 
         <ul class="advantage__block-circle">
           <li class="advantage__group-img-sign">
             <img src="./img/label1.svg" alt="">
-            <figcaption class="advantage__sign-text">
+            <p class="advantage__sign-text">
               Первое целевое преимущество
-            </figcaption>
+            </p>
           </li>
 
           <li class="advantage__group-img-sign">
             <img src="./img/label2.svg" alt="">
-            <figcaption class="advantage__sign-text">
+            <p class="advantage__sign-text">
               Второе целевое преимущество
-            </figcaption>
+            </p>
           </li>
 
           <li class="advantage__group-img-sign">
             <img src="./img/label3.svg" alt="">
-            <figcaption class="advantage__sign-text">
+            <p class="advantage__sign-text">
               Третье целевое преимущество
-            </figcaption>
+            </p>
           </li>
 
           <li class="advantage__group-img-sign">
             <img src="./img/label4.svg" alt="">
-            <figcaption class="advantage__sign-text">
+            <p class="advantage__sign-text">
               Четвертое целевое преимущество
-            </figcaption>
+            </p>
           </li>
         </ul>
         </div>
@@ -87,7 +87,7 @@
           <div class="contacts__post">
             <h2 class="contacts__title-text">Остались вопросы?</h2>
           </div>
-            <form action="https://jsonplaceholder.typicode.com/posts" method="POST">
+            <form class="contacts__form" action="https://jsonplaceholder.typicode.com/posts" method="POST">
             <h3 class="contacts__subtitle-text">Оставьте номер телефона, и мы перезвоним вам</h3>
               <div class="contacts__select-data">
                 <label for="name"><input class="contacts__decor" type="text" name="name" id="name" placeholder="Ваше имя" required></label>
@@ -95,8 +95,8 @@
                   <div class="contacts__e-mail">
                     <label for="E-mail"><input class="contacts__decor" type="text" name="E-mail" id="E-mail" placeholder="E-mail" required></label>
                   </div>
-                <button class="contacts__button" input type="submit">позвоните мне</button>
               </div>
+              <button class="contacts__button" input type="submit">позвоните мне</button>
             <p class="contacts__p">Я даю свое <a href="#" class="contacts__agreement">согласие</a> на обработку персональных данных</p>
             </form>
         </div>
