--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <p class="header__number">
             <a href="tel:+79509302893">+7 (962) 556 - 1234</a>
           </p>
-          <a href="#" class="header__call-me">Перезвоните мне</a>
+          <a href="phoneLink" class="header__call-me">Перезвоните мне</a>
         </div>
     </div>
 </header>
